fix: correct CartService test setup (CartDTO setters, mock new cart, set pricePerUnit, adjust clearCart & reviews assertions)